--- a/project_clean/csOne60/templates/base.html
+++ b/project_clean/csOne60/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}My Django Site{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'analysis/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="{% static 'feedback/css/homepage.css' %}">
     <link rel="stylesheet" href="{% static 'analysis/css/student-upload.css' %}">
     <link rel="stylesheet" href="{% static 'analysis/css/student-view.css' %}">
