--- a/project_clean/csOne60/templates/feedback/student_feedback.html
+++ b/project_clean/csOne60/templates/feedback/student_feedback.html
@@ -33,7 +33,7 @@
     {% endif %}
 
     <p style="margin-top: 20px;">
-        <a href="{% url 'feedback:feedback_report' course_id %}">← Back to Student List</a>
+        <a href="{% url 'feedback:feedback_search' course_id %}">← Back to Student List</a>
     </p>
 </main>
 {% endblock %}
